# balatrobot

./: .gitignore  .gitmodules  .release-please-manifest.json  404.html  CHANGELOG.md  CLAUDE.md  MECHANICS_SNAPSHOT.md  Makefile  README.md  balatro.sh  balatrobot.json  balatrobot.lua  bot.py  bot_example.py  index.html  llms-full.txt  llms.txt  mkdocs.yml  my_first_bot.py  objects.inv  pyproject.toml  sitemap.xml  test_checkpoint.py  test_load_save.py  test_snapshot_system.py  test_use_consumable.py
.claude/: settings.json
.claude/commands/: commit.md
.github/workflows/: code_quality.yml  deploy_docs.yml  release_please.yml
api-protocol/: index.html
balatrobot-api/: index.html  index.md
bot-development/: index.html
bots/: example.py  replay-tcp.py  replay.py
contributing/: index.html  index.md
developing-bots/: index.html  index.md
docs/: README.md  actions.md  api-protocol.md  architecture.md  balatrobot-api.md  best-practices.md  bot-development.md  configuration.md  contributing.md  developing-bots.md  examples.md  game-state.md  index.md  installation.md  logging-replay.md  logging-systems.md  lua-api.md  multi-instance.md  performance.md  protocol-api.md  python-api.md  troubleshooting.md
examples/: my_first_bot.py
installation/: index.html  index.md
logging-systems/: index.html
protocol-api/: index.html  index.md
search/: search_index.json
src/: api.lua
src/balatrobot/: __init__.py  base.py  client.py  enums.py  models.py  utils.py
src/lua/: api.lua  bot.lua  botlogger.lua  gamestate.lua  hook.lua  list.lua  log.lua  middleware.lua  settings.lua  types.lua  utils.lua
src/lua/types/: api.lua  gamestate.lua  log.lua  settings.lua  utils.lua
tests/: conftest.py  test_api_functions.py  test_connection.py  test_runs.py
tests/balatrobot/: test_client.py  test_exceptions.py  test_models.py
tests/lua/: conftest.py  test_api_functions.py  test_log.py  test_protocol_errors.py  test_runs.py
tests/lua/endpoints/: test_rearrange_consumeables.py  test_sell_consumable.py  test_shop.py  test_start_run.py  test_use_consumable.py
tests/lua/endpoints/checkpoints/: basic_shop_setup.jkr  buy_cant_use.jkr  plasma_deck.jkr
tests/runs/: 20250725T093024.jsonl  20250725T150321.jsonl  20250728T124228.jsonl  20250731T095914.jsonl  20250731T141121.jsonl  20250731T143200.jsonl  20250731T152129.shop_reroll.jsonl  20250731T195933.shop_reroll.jsonl  buy_joker.jsonl  no_shop.jsonl  one_ante_no_shop_1.jsonl  one_ante_no_shop_2.jsonl  rearrange_consumables.jsonl  rearrange_consumeables.jsonl  rearrange_jokers.jsonl  sell_consumables.jsonl  sell_jokers.jsonl  shop_reroll.jsonl  use_consumable.planet.jsonl
troubleshooting/: index.html
